seaqt/QtWidgets/gen_qtreewidget.h

typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QMetaObject QMetaObject;
typedef struct QSize QSize;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
typedef struct QVariant QVariant;
struct QTreeWidgetItem_VTable {
	void (*destructor)(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* self);
	QTreeWidgetItem* (*clone)(struct QTreeWidgetItem_VTable* vtbl, const QTreeWidgetItem* self);
	QVariant* (*data)(struct QTreeWidgetItem_VTable* vtbl, const QTreeWidgetItem* self, int column, int role);
	void (*setData)(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* self, int column, int role, QVariant* value);
	bool (*operatorLesser)(struct QTreeWidgetItem_VTable* vtbl, const QTreeWidgetItem* self, QTreeWidgetItem* other);
	void (*read)(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* self, QDataStream* in);
	void (*write)(struct QTreeWidgetItem_VTable* vtbl, const QTreeWidgetItem* self, QDataStream* out);
};
QTreeWidgetItem* QTreeWidgetItem_new(struct QTreeWidgetItem_VTable* vtbl);
QTreeWidgetItem* QTreeWidgetItem_new2(struct QTreeWidgetItem_VTable* vtbl, struct miqt_array /* of struct miqt_string */  strings);
QTreeWidgetItem* QTreeWidgetItem_new3(struct QTreeWidgetItem_VTable* vtbl, QTreeWidget* treeview);
QTreeWidgetItem* QTreeWidgetItem_new4(struct QTreeWidgetItem_VTable* vtbl, QTreeWidget* treeview, struct miqt_array /* of struct miqt_string */  strings);
QTreeWidgetItem* QTreeWidgetItem_new5(struct QTreeWidgetItem_VTable* vtbl, QTreeWidget* treeview, QTreeWidgetItem* after);
QTreeWidgetItem* QTreeWidgetItem_new6(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* parent);
QTreeWidgetItem* QTreeWidgetItem_new7(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* parent, struct miqt_array /* of struct miqt_string */  strings);
QTreeWidgetItem* QTreeWidgetItem_new8(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* parent, QTreeWidgetItem* after);
QTreeWidgetItem* QTreeWidgetItem_new9(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* other);
QTreeWidgetItem* QTreeWidgetItem_new10(struct QTreeWidgetItem_VTable* vtbl, int type);
QTreeWidgetItem* QTreeWidgetItem_new11(struct QTreeWidgetItem_VTable* vtbl, struct miqt_array /* of struct miqt_string */  strings, int type);
QTreeWidgetItem* QTreeWidgetItem_new12(struct QTreeWidgetItem_VTable* vtbl, QTreeWidget* treeview, int type);
QTreeWidgetItem* QTreeWidgetItem_new13(struct QTreeWidgetItem_VTable* vtbl, QTreeWidget* treeview, struct miqt_array /* of struct miqt_string */  strings, int type);
QTreeWidgetItem* QTreeWidgetItem_new14(struct QTreeWidgetItem_VTable* vtbl, QTreeWidget* treeview, QTreeWidgetItem* after, int type);
QTreeWidgetItem* QTreeWidgetItem_new15(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* parent, int type);
QTreeWidgetItem* QTreeWidgetItem_new16(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* parent, struct miqt_array /* of struct miqt_string */  strings, int type);
QTreeWidgetItem* QTreeWidgetItem_new17(struct QTreeWidgetItem_VTable* vtbl, QTreeWidgetItem* parent, QTreeWidgetItem* after, int type);
QTreeWidgetItem* QTreeWidgetItem_clone(const QTreeWidgetItem* self);
QTreeWidget* QTreeWidgetItem_treeWidget(const QTreeWidgetItem* self);
void QTreeWidgetItem_setSelected(QTreeWidgetItem* self, bool select);
bool QTreeWidgetItem_isSelected(const QTreeWidgetItem* self);
void QTreeWidgetItem_setHidden(QTreeWidgetItem* self, bool hide);
bool QTreeWidgetItem_isHidden(const QTreeWidgetItem* self);
void QTreeWidgetItem_setExpanded(QTreeWidgetItem* self, bool expand);
bool QTreeWidgetItem_isExpanded(const QTreeWidgetItem* self);
void QTreeWidgetItem_setFirstColumnSpanned(QTreeWidgetItem* self, bool span);
bool QTreeWidgetItem_isFirstColumnSpanned(const QTreeWidgetItem* self);
void QTreeWidgetItem_setDisabled(QTreeWidgetItem* self, bool disabled);
bool QTreeWidgetItem_isDisabled(const QTreeWidgetItem* self);
void QTreeWidgetItem_setChildIndicatorPolicy(QTreeWidgetItem* self, int policy);
int QTreeWidgetItem_childIndicatorPolicy(const QTreeWidgetItem* self);
int QTreeWidgetItem_flags(const QTreeWidgetItem* self);
void QTreeWidgetItem_setFlags(QTreeWidgetItem* self, int flags);
struct miqt_string QTreeWidgetItem_text(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setText(QTreeWidgetItem* self, int column, struct miqt_string text);
QIcon* QTreeWidgetItem_icon(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setIcon(QTreeWidgetItem* self, int column, QIcon* icon);
struct miqt_string QTreeWidgetItem_statusTip(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setStatusTip(QTreeWidgetItem* self, int column, struct miqt_string statusTip);
struct miqt_string QTreeWidgetItem_toolTip(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setToolTip(QTreeWidgetItem* self, int column, struct miqt_string toolTip);
struct miqt_string QTreeWidgetItem_whatsThis(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setWhatsThis(QTreeWidgetItem* self, int column, struct miqt_string whatsThis);
QFont* QTreeWidgetItem_font(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setFont(QTreeWidgetItem* self, int column, QFont* font);
int QTreeWidgetItem_textAlignment(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setTextAlignment(QTreeWidgetItem* self, int column, int alignment);
QColor* QTreeWidgetItem_backgroundColor(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setBackgroundColor(QTreeWidgetItem* self, int column, QColor* color);
QBrush* QTreeWidgetItem_background(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setBackground(QTreeWidgetItem* self, int column, QBrush* brush);
QColor* QTreeWidgetItem_textColor(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setTextColor(QTreeWidgetItem* self, int column, QColor* color);
QBrush* QTreeWidgetItem_foreground(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setForeground(QTreeWidgetItem* self, int column, QBrush* brush);
int QTreeWidgetItem_checkState(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setCheckState(QTreeWidgetItem* self, int column, int state);
QSize* QTreeWidgetItem_sizeHint(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_setSizeHint(QTreeWidgetItem* self, int column, QSize* size);
QVariant* QTreeWidgetItem_data(const QTreeWidgetItem* self, int column, int role);
void QTreeWidgetItem_setData(QTreeWidgetItem* self, int column, int role, QVariant* value);
bool QTreeWidgetItem_operatorLesser(const QTreeWidgetItem* self, QTreeWidgetItem* other);
void QTreeWidgetItem_read(QTreeWidgetItem* self, QDataStream* in);
void QTreeWidgetItem_write(const QTreeWidgetItem* self, QDataStream* out);
void QTreeWidgetItem_operatorAssign(QTreeWidgetItem* self, QTreeWidgetItem* other);
QTreeWidgetItem* QTreeWidgetItem_parent(const QTreeWidgetItem* self);
QTreeWidgetItem* QTreeWidgetItem_child(const QTreeWidgetItem* self, int index);
int QTreeWidgetItem_childCount(const QTreeWidgetItem* self);
int QTreeWidgetItem_columnCount(const QTreeWidgetItem* self);
int QTreeWidgetItem_indexOfChild(const QTreeWidgetItem* self, QTreeWidgetItem* child);
void QTreeWidgetItem_addChild(QTreeWidgetItem* self, QTreeWidgetItem* child);
void QTreeWidgetItem_insertChild(QTreeWidgetItem* self, int index, QTreeWidgetItem* child);
void QTreeWidgetItem_removeChild(QTreeWidgetItem* self, QTreeWidgetItem* child);
QTreeWidgetItem* QTreeWidgetItem_takeChild(QTreeWidgetItem* self, int index);
void QTreeWidgetItem_addChildren(QTreeWidgetItem* self, struct miqt_array /* of QTreeWidgetItem* */  children);
void QTreeWidgetItem_insertChildren(QTreeWidgetItem* self, int index, struct miqt_array /* of QTreeWidgetItem* */  children);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidgetItem_takeChildren(QTreeWidgetItem* self);
int QTreeWidgetItem_type(const QTreeWidgetItem* self);
void QTreeWidgetItem_sortChildren(QTreeWidgetItem* self, int column, int order);
QTreeWidgetItem* QTreeWidgetItem_virtualbase_clone(const void* self);
QVariant* QTreeWidgetItem_virtualbase_data(const void* self, int column, int role);
void QTreeWidgetItem_virtualbase_setData(void* self, int column, int role, QVariant* value);
bool QTreeWidgetItem_virtualbase_operatorLesser(const void* self, QTreeWidgetItem* other);
void QTreeWidgetItem_virtualbase_read(void* self, QDataStream* in);
void QTreeWidgetItem_virtualbase_write(const void* self, QDataStream* out);
void QTreeWidgetItem_protectedbase_emitDataChanged(void* self);
void QTreeWidgetItem_delete(QTreeWidgetItem* self);
QMetaObject* QTreeWidget_metaObject(const QTreeWidget* self);
void* QTreeWidget_metacast(QTreeWidget* self, const char* param1);
int QTreeWidget_metacall(QTreeWidget* self, int param1, int param2, void** param3);
struct miqt_string QTreeWidget_tr(const char* s);
struct miqt_string QTreeWidget_trUtf8(const char* s);
int QTreeWidget_columnCount(const QTreeWidget* self);
void QTreeWidget_connect_itemPressed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemDoubleClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemActivated(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemEntered(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemExpanded(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemCollapsed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_currentItemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemSelectionChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));