seaqt/QtWidgets/gen_qtreewidget.nim


proc fcQTreeWidgetItem_clone(self: pointer, ): pointer {.importc: "QTreeWidgetItem_clone".}
proc fcQTreeWidgetItem_treeWidget(self: pointer, ): pointer {.importc: "QTreeWidgetItem_treeWidget".}
proc fcQTreeWidgetItem_setSelected(self: pointer, select: bool): void {.importc: "QTreeWidgetItem_setSelected".}
proc fcQTreeWidgetItem_isSelected(self: pointer, ): bool {.importc: "QTreeWidgetItem_isSelected".}
proc fcQTreeWidgetItem_setHidden(self: pointer, hide: bool): void {.importc: "QTreeWidgetItem_setHidden".}
proc fcQTreeWidgetItem_isHidden(self: pointer, ): bool {.importc: "QTreeWidgetItem_isHidden".}
proc fcQTreeWidgetItem_setExpanded(self: pointer, expand: bool): void {.importc: "QTreeWidgetItem_setExpanded".}
proc fcQTreeWidgetItem_isExpanded(self: pointer, ): bool {.importc: "QTreeWidgetItem_isExpanded".}
proc fcQTreeWidgetItem_setFirstColumnSpanned(self: pointer, span: bool): void {.importc: "QTreeWidgetItem_setFirstColumnSpanned".}
proc fcQTreeWidgetItem_isFirstColumnSpanned(self: pointer, ): bool {.importc: "QTreeWidgetItem_isFirstColumnSpanned".}
proc fcQTreeWidgetItem_setDisabled(self: pointer, disabled: bool): void {.importc: "QTreeWidgetItem_setDisabled".}
proc fcQTreeWidgetItem_isDisabled(self: pointer, ): bool {.importc: "QTreeWidgetItem_isDisabled".}
proc fcQTreeWidgetItem_setChildIndicatorPolicy(self: pointer, policy: cint): void {.importc: "QTreeWidgetItem_setChildIndicatorPolicy".}
proc fcQTreeWidgetItem_childIndicatorPolicy(self: pointer, ): cint {.importc: "QTreeWidgetItem_childIndicatorPolicy".}
proc fcQTreeWidgetItem_flags(self: pointer, ): cint {.importc: "QTreeWidgetItem_flags".}
proc fcQTreeWidgetItem_setFlags(self: pointer, flags: cint): void {.importc: "QTreeWidgetItem_setFlags".}
proc fcQTreeWidgetItem_text(self: pointer, column: cint): struct_miqt_string {.importc: "QTreeWidgetItem_text".}
proc fcQTreeWidgetItem_setText(self: pointer, column: cint, text: struct_miqt_string): void {.importc: "QTreeWidgetItem_setText".}
proc fcQTreeWidgetItem_icon(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_icon".}
proc fcQTreeWidgetItem_setIcon(self: pointer, column: cint, icon: pointer): void {.importc: "QTreeWidgetItem_setIcon".}
proc fcQTreeWidgetItem_statusTip(self: pointer, column: cint): struct_miqt_string {.importc: "QTreeWidgetItem_statusTip".}
proc fcQTreeWidgetItem_setStatusTip(self: pointer, column: cint, statusTip: struct_miqt_string): void {.importc: "QTreeWidgetItem_setStatusTip".}
proc fcQTreeWidgetItem_toolTip(self: pointer, column: cint): struct_miqt_string {.importc: "QTreeWidgetItem_toolTip".}
proc fcQTreeWidgetItem_setToolTip(self: pointer, column: cint, toolTip: struct_miqt_string): void {.importc: "QTreeWidgetItem_setToolTip".}
proc fcQTreeWidgetItem_whatsThis(self: pointer, column: cint): struct_miqt_string {.importc: "QTreeWidgetItem_whatsThis".}
proc fcQTreeWidgetItem_setWhatsThis(self: pointer, column: cint, whatsThis: struct_miqt_string): void {.importc: "QTreeWidgetItem_setWhatsThis".}
proc fcQTreeWidgetItem_font(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_font".}
proc fcQTreeWidgetItem_setFont(self: pointer, column: cint, font: pointer): void {.importc: "QTreeWidgetItem_setFont".}
proc fcQTreeWidgetItem_textAlignment(self: pointer, column: cint): cint {.importc: "QTreeWidgetItem_textAlignment".}
proc fcQTreeWidgetItem_setTextAlignment(self: pointer, column: cint, alignment: cint): void {.importc: "QTreeWidgetItem_setTextAlignment".}
proc fcQTreeWidgetItem_backgroundColor(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_backgroundColor".}
proc fcQTreeWidgetItem_setBackgroundColor(self: pointer, column: cint, color: pointer): void {.importc: "QTreeWidgetItem_setBackgroundColor".}
proc fcQTreeWidgetItem_background(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_background".}
proc fcQTreeWidgetItem_setBackground(self: pointer, column: cint, brush: pointer): void {.importc: "QTreeWidgetItem_setBackground".}
proc fcQTreeWidgetItem_textColor(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_textColor".}
proc fcQTreeWidgetItem_setTextColor(self: pointer, column: cint, color: pointer): void {.importc: "QTreeWidgetItem_setTextColor".}
proc fcQTreeWidgetItem_foreground(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_foreground".}
proc fcQTreeWidgetItem_setForeground(self: pointer, column: cint, brush: pointer): void {.importc: "QTreeWidgetItem_setForeground".}
proc fcQTreeWidgetItem_checkState(self: pointer, column: cint): cint {.importc: "QTreeWidgetItem_checkState".}
proc fcQTreeWidgetItem_setCheckState(self: pointer, column: cint, state: cint): void {.importc: "QTreeWidgetItem_setCheckState".}
proc fcQTreeWidgetItem_sizeHint(self: pointer, column: cint): pointer {.importc: "QTreeWidgetItem_sizeHint".}
proc fcQTreeWidgetItem_setSizeHint(self: pointer, column: cint, size: pointer): void {.importc: "QTreeWidgetItem_setSizeHint".}
proc fcQTreeWidgetItem_data(self: pointer, column: cint, role: cint): pointer {.importc: "QTreeWidgetItem_data".}
proc fcQTreeWidgetItem_setData(self: pointer, column: cint, role: cint, value: pointer): void {.importc: "QTreeWidgetItem_setData".}
proc fcQTreeWidgetItem_operatorLesser(self: pointer, other: pointer): bool {.importc: "QTreeWidgetItem_operatorLesser".}
proc fcQTreeWidgetItem_read(self: pointer, inVal: pointer): void {.importc: "QTreeWidgetItem_read".}
proc fcQTreeWidgetItem_write(self: pointer, outVal: pointer): void {.importc: "QTreeWidgetItem_write".}
proc fcQTreeWidgetItem_operatorAssign(self: pointer, other: pointer): void {.importc: "QTreeWidgetItem_operatorAssign".}
proc fcQTreeWidgetItem_parent(self: pointer, ): pointer {.importc: "QTreeWidgetItem_parent".}
proc fcQTreeWidgetItem_child(self: pointer, index: cint): pointer {.importc: "QTreeWidgetItem_child".}
proc fcQTreeWidgetItem_childCount(self: pointer, ): cint {.importc: "QTreeWidgetItem_childCount".}
proc fcQTreeWidgetItem_columnCount(self: pointer, ): cint {.importc: "QTreeWidgetItem_columnCount".}
proc fcQTreeWidgetItem_indexOfChild(self: pointer, child: pointer): cint {.importc: "QTreeWidgetItem_indexOfChild".}
proc fcQTreeWidgetItem_addChild(self: pointer, child: pointer): void {.importc: "QTreeWidgetItem_addChild".}
proc fcQTreeWidgetItem_insertChild(self: pointer, index: cint, child: pointer): void {.importc: "QTreeWidgetItem_insertChild".}
proc fcQTreeWidgetItem_removeChild(self: pointer, child: pointer): void {.importc: "QTreeWidgetItem_removeChild".}
proc fcQTreeWidgetItem_takeChild(self: pointer, index: cint): pointer {.importc: "QTreeWidgetItem_takeChild".}
proc fcQTreeWidgetItem_addChildren(self: pointer, children: struct_miqt_array): void {.importc: "QTreeWidgetItem_addChildren".}
proc fcQTreeWidgetItem_insertChildren(self: pointer, index: cint, children: struct_miqt_array): void {.importc: "QTreeWidgetItem_insertChildren".}
proc fcQTreeWidgetItem_takeChildren(self: pointer, ): struct_miqt_array {.importc: "QTreeWidgetItem_takeChildren".}
proc fcQTreeWidgetItem_typeX(self: pointer, ): cint {.importc: "QTreeWidgetItem_type".}
proc fcQTreeWidgetItem_sortChildren(self: pointer, column: cint, order: cint): void {.importc: "QTreeWidgetItem_sortChildren".}
type cQTreeWidgetItemVTable = object
  destructor*: proc(vtbl: ptr cQTreeWidgetItemVTable, self: ptr cQTreeWidgetItem) {.cdecl, raises:[], gcsafe.}
  clone*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  data*: proc(vtbl, self: pointer, column: cint, role: cint): pointer {.cdecl, raises: [], gcsafe.}
  setData*: proc(vtbl, self: pointer, column: cint, role: cint, value: pointer): void {.cdecl, raises: [], gcsafe.}
  operatorLesser*: proc(vtbl, self: pointer, other: pointer): bool {.cdecl, raises: [], gcsafe.}
  read*: proc(vtbl, self: pointer, inVal: pointer): void {.cdecl, raises: [], gcsafe.}
  write*: proc(vtbl, self: pointer, outVal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQTreeWidgetItem_virtualbase_clone(self: pointer, ): pointer {.importc: "QTreeWidgetItem_virtualbase_clone".}
proc fcQTreeWidgetItem_virtualbase_data(self: pointer, column: cint, role: cint): pointer {.importc: "QTreeWidgetItem_virtualbase_data".}
proc fcQTreeWidgetItem_virtualbase_setData(self: pointer, column: cint, role: cint, value: pointer): void {.importc: "QTreeWidgetItem_virtualbase_setData".}
proc fcQTreeWidgetItem_virtualbase_operatorLesser(self: pointer, other: pointer): bool {.importc: "QTreeWidgetItem_virtualbase_operatorLesser".}
proc fcQTreeWidgetItem_virtualbase_read(self: pointer, inVal: pointer): void {.importc: "QTreeWidgetItem_virtualbase_read".}
proc fcQTreeWidgetItem_virtualbase_write(self: pointer, outVal: pointer): void {.importc: "QTreeWidgetItem_virtualbase_write".}
proc fcQTreeWidgetItem_protectedbase_emitDataChanged(self: pointer, ): void {.importc: "QTreeWidgetItem_protectedbase_emitDataChanged".}
proc fcQTreeWidgetItem_new(vtbl: pointer, ): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new".}
proc fcQTreeWidgetItem_new2(vtbl: pointer, strings: struct_miqt_array): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new2".}
proc fcQTreeWidgetItem_new3(vtbl: pointer, treeview: pointer): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new3".}
proc fcQTreeWidgetItem_new4(vtbl: pointer, treeview: pointer, strings: struct_miqt_array): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new4".}
proc fcQTreeWidgetItem_new5(vtbl: pointer, treeview: pointer, after: pointer): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new5".}
proc fcQTreeWidgetItem_new6(vtbl: pointer, parent: pointer): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new6".}
proc fcQTreeWidgetItem_new7(vtbl: pointer, parent: pointer, strings: struct_miqt_array): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new7".}
proc fcQTreeWidgetItem_new8(vtbl: pointer, parent: pointer, after: pointer): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new8".}
proc fcQTreeWidgetItem_new9(vtbl: pointer, other: pointer): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new9".}
proc fcQTreeWidgetItem_new10(vtbl: pointer, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new10".}
proc fcQTreeWidgetItem_new11(vtbl: pointer, strings: struct_miqt_array, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new11".}
proc fcQTreeWidgetItem_new12(vtbl: pointer, treeview: pointer, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new12".}
proc fcQTreeWidgetItem_new13(vtbl: pointer, treeview: pointer, strings: struct_miqt_array, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new13".}
proc fcQTreeWidgetItem_new14(vtbl: pointer, treeview: pointer, after: pointer, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new14".}
proc fcQTreeWidgetItem_new15(vtbl: pointer, parent: pointer, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new15".}
proc fcQTreeWidgetItem_new16(vtbl: pointer, parent: pointer, strings: struct_miqt_array, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new16".}
proc fcQTreeWidgetItem_new17(vtbl: pointer, parent: pointer, after: pointer, typeVal: cint): ptr cQTreeWidgetItem {.importc: "QTreeWidgetItem_new17".}
proc fcQTreeWidgetItem_delete(self: pointer) {.importc: "QTreeWidgetItem_delete".}
proc fcQTreeWidget_metaObject(self: pointer, ): pointer {.importc: "QTreeWidget_metaObject".}
proc fcQTreeWidget_metacast(self: pointer, param1: cstring): pointer {.importc: "QTreeWidget_metacast".}
proc fcQTreeWidget_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTreeWidget_metacall".}
proc fcQTreeWidget_tr(s: cstring): struct_miqt_string {.importc: "QTreeWidget_tr".}
proc fcQTreeWidget_trUtf8(s: cstring): struct_miqt_string {.importc: "QTreeWidget_trUtf8".}
proc fcQTreeWidget_columnCount(self: pointer, ): cint {.importc: "QTreeWidget_columnCount".}
